--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <div class="info-item"><strong>Location:</strong> <span>Ndola, Zambia</span></div>
                 </div>
 
-                <form action="https://api.web3forms.com/submit" method="POST" class="contact-form">
+                <<form action="https://api.web3forms.com/submit" method="POST" class="contact-form">
                     <input type="hidden" name="access_key" value="85607426-e470-4575-8f51-a5264ac179c3">
                     <input type="hidden" name="redirect" value="https://apptechofficial.github.io/AppTech/thank-you.html">
                     
