--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#founders">Founders</a></li>
                 <li><a href="#services">Services</a></li>
+                <li><a href="#about">Our Values</a></li>
                 <li><a href="#contact" class="nav-btn">Start a Project</a></li>
             </ul>
         </div>
@@ -32,7 +33,7 @@
         <div class="container">
             <div class="hero-text">
                 <h1>Bridging the Gap Between <br><span class="accent">Networking</span> & <span class="accent">Humanity</span></h1>
-                <p>Expert Web Development and Data Communication solutions tailored for businesses in Ndola.</p>
+                <p>We craft digital experiences and robust network infrastructures that harmonize technical precision with human-centric design.</p>
                 <div class="hero-btns">
                     <a href="#services" class="btn btn-primary">Explore Services</a>
                     <a href="#contact" class="btn btn-outline">Get a Quote</a>
@@ -41,24 +42,24 @@
         </div>
     </header>
 
-    <section id="founders" class="founders-section">
+    <section id="founders" class="welcome-section">
         <div class="container text-center">
-            <h2 class="section-title">Meet the Founders</h2>
-            <div class="founders-grid">
-                <div class="founder-card">
-                    <h3>Lilato Nalumino</h3>
-                    <p class="founder-role">Co-Founder</p>
+            <h2 style="font-size: 2.5rem; color: var(--navy); margin-bottom: 30px;">Meet the Founders</h2>
+            <div style="display: flex; justify-content: center; gap: 60px; flex-wrap: wrap;">
+                <div>
+                    <h3 style="font-size: 1.8rem; color: var(--navy); margin-bottom: 5px;">Lilato Nalumino</h3>
+                    <p style="text-transform: uppercase; letter-spacing: 2px; color: var(--blue); font-weight: 600;">Co-Founder</p>
                 </div>
-                <div class="founder-card">
-                    <h3>Manasseh Sasu</h3>
-                    <p class="founder-role">Co-Founder</p>
+                <div>
+                    <h3 style="font-size: 1.8rem; color: var(--navy); margin-bottom: 5px;">Manasseh Sasu</h3>
+                    <p style="text-transform: uppercase; letter-spacing: 2px; color: var(--blue); font-weight: 600;">Co-Founder</p>
                 </div>
             </div>
             <div class="welcome-divider"></div>
         </div>
     </section>
 
-    <section id="welcome" class="welcome-section">
+    <section id="welcome" class="welcome-section" style="padding-top: 20px;">
         <div class="container text-center">
             <h3 class="welcome-tag">Welcome to AppTech</h3>
             <h2>Where Technology Meets the Human Touch.</h2>
@@ -77,7 +78,12 @@
                 <div class="card">
                     <div class="card-icon">🌐</div>
                     <h3>Web Development</h3>
-                    <p>Modern, responsive websites built with high performance and clean code.</p>
+                    <p>Modern, responsive websites built with clean code and high performance in mind.</p>
+                    <ul>
+                        <li>Custom Portfolios</li>
+                        <li>E-commerce Platforms</li>
+                        <li>UI/UX Design</li>
+                    </ul>
                 </div>
 
                 <div class="card">
@@ -94,7 +100,30 @@
                 <div class="card">
                     <div class="card-icon">💻</div>
                     <h3>IT Foundations</h3>
-                    <p>Essential digital infrastructure to keep your business running smoothly.</p>
+                    <p>Setting up the essential digital infrastructure to keep your business running smoothly.</p>
+                    <ul>
+                        <li>System Setup</li>
+                        <li>Technical Support</li>
+                        <li>Hardware Solutions</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="about" class="values-section">
+        <div class="container">
+            <h2 class="section-title text-center">Our Core Values</h2>
+            <div class="values-grid">
+                <div class="value-item">
+                    <div class="value-number">01</div>
+                    <h3>Human-Centric Design</h3>
+                    <p>We believe technology should adapt to people, not the other way around. Every automation we build is designed to be intuitive and stress-free.</p>
+                </div>
+                <div class="value-item">
+                    <div class="value-number">02</div>
+                    <h3>Bridging the Gap</h3>
+                    <p>We create seamless transitions between manual work and digital power, making businesses more efficient.</p>
                 </div>
             </div>
         </div>
@@ -111,7 +140,7 @@
                     <div class="info-item"><strong>Location:</strong> <span>Ndola, Zambia</span></div>
                 </div>
 
-                <<form action="https://api.web3forms.com/submit" method="POST" class="contact-form">
+                <form action="https://api.web3forms.com/submit" method="POST" class="contact-form">
                     <input type="hidden" name="access_key" value="85607426-e470-4575-8f51-a5264ac179c3">
                     <input type="hidden" name="redirect" value="https://apptechofficial.github.io/AppTech/thank-you.html">
                     
