--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AppTech | Bridging Tech and Human Connection</title>
+    <title>AppTech | Bridging Automation and Human Intuition</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
@@ -21,8 +21,7 @@
             </div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
-                <li><a href="#founders">Founders</a></li>
-                <li><a href="#services">Services</a></li>
+                <li><a href="#founders">Founders</a></li> <li><a href="#services">Services</a></li>
                 <li><a href="#about">Our Values</a></li>
                 <li><a href="#contact" class="nav-btn">Start a Project</a></li>
             </ul>
@@ -32,8 +31,8 @@
     <header id="home" class="hero">
         <div class="container">
             <div class="hero-text">
-                <h1>Bridging the Gap Between <br><span class="accent">Networking</span> & <span class="accent">Humanity</span></h1>
-                <p>We craft digital experiences and robust network infrastructures that harmonize technical precision with human-centric design.</p>
+                <h1>Bridging the Gap Between <br><span class="accent">Automation</span> & <span class="accent">Human</span></h1>
+                <p>We craft digital experiences and IT foundations that harmonize technical precision with human-centric design.</p>
                 <div class="hero-btns">
                     <a href="#services" class="btn btn-primary">Explore Services</a>
                     <a href="#contact" class="btn btn-outline">Get a Quote</a>
@@ -42,32 +41,60 @@
         </div>
     </header>
 
-    <section id="founders" class="welcome-section">
+    <section id="founders" class="welcome-section" style="padding-bottom: 0;">
         <div class="container text-center">
-            <h2 style="font-size: 2.5rem; color: var(--navy); margin-bottom: 30px;">Meet the Founders</h2>
-            <div style="display: flex; justify-content: center; gap: 60px; flex-wrap: wrap;">
-                <div>
-                    <h3 style="font-size: 1.8rem; color: var(--navy); margin-bottom: 5px;">Lilato Nalumino</h3>
-                    <p style="text-transform: uppercase; letter-spacing: 2px; color: var(--blue); font-weight: 600;">Co-Founder</p>
+            <h2 class="section-title">Meet the Founders</h2>
+            <div class="founders-grid">
+                <div class="founder-card">
+                    <h3>Lilato Nalumino</h3>
+                    <p class="founder-role">Co-Founder</p>
                 </div>
-                <div>
-                    <h3 style="font-size: 1.8rem; color: var(--navy); margin-bottom: 5px;">Manasseh Sasu</h3>
-                    <p style="text-transform: uppercase; letter-spacing: 2px; color: var(--blue); font-weight: 600;">Co-Founder</p>
+                <div class="founder-card">
+                    <h3>Manasseh Sasu</h3>
+                    <p class="founder-role">Co-Founder</p>
                 </div>
             </div>
-            <div class="welcome-divider"></div>
         </div>
     </section>
 
-    <section id="welcome" class="welcome-section" style="padding-top: 20px;">
+    <section id="welcome" class="welcome-section">
         <div class="container text-center">
             <h3 class="welcome-tag">Welcome to AppTech</h3>
             <h2>Where Technology Meets the Human Touch.</h2>
             <p class="welcome-text">
                 In a world moving rapidly toward total automation, we noticed something missing: <strong>The Human Element.</strong> 
                 At AppTech, we don’t just write code or configure servers; we build bridges. Whether you are a small business looking 
-                for your first professional website or a company needing robust data communication, we ensure technology serves you.
+                for your first professional website or a growing company needing to simplify your IT workflow, we are here to ensure 
+                that technology serves you—not the other way around.
             </p>
+            <div class="welcome-divider"></div>
+        </div>
+    </section>
+
+    <section id="about" class="values-section">
+        <div class="container">
+            <h2 class="section-title text-center">Our Core Values</h2>
+            <p class="section-subtitle text-center">The philosophy behind every line of code we write.</p>
+            
+            <div class="values-grid">
+                <div class="value-item">
+                    <div class="value-number">01</div>
+                    <h3>Human-Centric Design</h3>
+                    <p>We believe technology should adapt to people, not the other way around. Every automation we build is designed to be intuitive and stress-free for the user.</p>
+                </div>
+
+                <div class="value-item">
+                    <div class="value-number">02</div>
+                    <h3>Bridging the Gap</h3>
+                    <p>We identify the smallest frictions between manual work and digital power, creating seamless transitions that make businesses more efficient.</p>
+                </div>
+
+                <div class="value-item">
+                    <div class="value-number">03</div>
+                    <h3>Empowering Literacy</h3>
+                    <p>Automation isn't helpful if you don't understand it. We provide the "IT Basics" to ensure our clients feel confident and in control of their tools.</p>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -85,45 +112,25 @@
                         <li>UI/UX Design</li>
                     </ul>
                 </div>
-
-                <div class="card">
-                    <div class="card-icon">📡</div>
-                    <h3>Network Infrastructure</h3>
-                    <p>Expert Data Communication and Networking solutions for modern businesses.</p>
-                    <ul>
-                        <li>LAN/WAN Design</li>
-                        <li>Network Security</li>
-                        <li>Wireless Optimization</li>
-                    </ul>
-                </div>
-
                 <div class="card">
                     <div class="card-icon">💻</div>
                     <h3>IT Foundations</h3>
                     <p>Setting up the essential digital infrastructure to keep your business running smoothly.</p>
                     <ul>
                         <li>System Setup</li>
-                        <li>Technical Support</li>
-                        <li>Hardware Solutions</li>
+                        <li>Network Solutions</li>
+                        <li>Security Basics</li>
                     </ul>
                 </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="about" class="values-section">
-        <div class="container">
-            <h2 class="section-title text-center">Our Core Values</h2>
-            <div class="values-grid">
-                <div class="value-item">
-                    <div class="value-number">01</div>
-                    <h3>Human-Centric Design</h3>
-                    <p>We believe technology should adapt to people, not the other way around. Every automation we build is designed to be intuitive and stress-free.</p>
-                </div>
-                <div class="value-item">
-                    <div class="value-number">02</div>
-                    <h3>Bridging the Gap</h3>
-                    <p>We create seamless transitions between manual work and digital power, making businesses more efficient.</p>
+                <div class="card">
+                    <div class="card-icon">⚙️</div>
+                    <h3>Smart Automation</h3>
+                    <p>Connecting repetitive workflows with automated tools to save you time and money.</p>
+                    <ul>
+                        <li>Process Mapping</li>
+                        <li>Tool Integration</li>
+                        <li>Workflow Efficiency</li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -134,10 +141,22 @@
             <div class="contact-wrapper">
                 <div class="contact-info">
                     <h2>Let's Connect</h2>
-                    <p>Ready to bridge the gap? Contact us today.</p>
-                    <div class="info-item"><strong>Email:</strong> <span>apptech.official@gmail.com</span></div>
-                    <div class="info-item"><strong>Phone:</strong> <span>+260 975 212 655</span></div>
-                    <div class="info-item"><strong>Location:</strong> <span>Ndola, Zambia</span></div>
+                    <p>Have a project in mind? We'd love to help you bridge the gap.</p>
+                    
+                    <div class="info-item">
+                        <strong>Email:</strong> <span>apptech.official@gmail.com</span>
+                    </div>
+
+                    <div class="info-item">
+                        <strong>Phone:</strong> 
+                        <span>+260 975 212 655</span><br>
+                        <strong style="visibility: hidden;">Phone:</strong> 
+                        <span>+260 773 562 277</span>
+                    </div>
+
+                    <div class="info-item">
+                        <strong>Location:</strong> <span>Ndola, Zambia</span>
+                    </div>
                 </div>
 
                 <form action="https://api.web3forms.com/submit" method="POST" class="contact-form">
@@ -167,7 +186,7 @@
 
                     <div class="form-group">
                         <label>Message</label>
-                        <textarea name="message" rows="5" placeholder="How can Lilato and Manasseh help you?" required></textarea>
+                        <textarea name="message" rows="5" placeholder="Tell us about your needs..." required></textarea>
                     </div>
 
                     <button type="submit" class="btn btn-primary">Send Message</button>
@@ -176,7 +195,7 @@
         </div>
     </section>
 
-    <footer class="footer text-center">
+   <footer class="footer text-center">
         <p>&copy; 2026 AppTech Solutions. Founded by Lilato Nalumino & Manasseh Sasu.</p>
     </footer>
 
