--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <h2 class="section-title">Meet the Founders</h2>
             <div class="founders-grid">
                 <div class="founder-card">
-                    <h3>Lilato Nalumino</h3>
+                    <h3>Lilato Chikonde</h3>
                     <p class="founder-role">Co-Founder</p>
                 </div>
                 <div class="founder-card">
@@ -197,7 +197,7 @@
     </section>
 
    <footer class="footer text-center">
-        <p>&copy; 2026 AppTech Solutions. Founded by Lilato Nalumino & Manasseh Sasu.</p>
+        <p>&copy; 2026 AppTech Solutions. Founded by Lilato Chikonde & Manasseh Sasu.</p>
     </footer>
 
 </body>
