--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
     </header>
 
-    <section id="founders" class="welcome-section">
+    <section id="founders" class="welcome-section" style="padding-bottom: 0;">
         <div class="container text-center">
             <h2 class="section-title">Meet the Founders</h2>
             <div class="founders-grid">
@@ -58,39 +58,76 @@
         </div>
     </section>
 
-    <section id="contact" class="contact">
+    <section id="welcome" class="welcome-section">
+        <div class="container text-center">
+            <h3 class="welcome-tag">Welcome to AppTech</h3>
+            <h2>Where Technology Meets the Human Touch.</h2>
+            <p class="welcome-text">
+                In a world moving rapidly toward total automation, we noticed something missing: <strong>The Human Element.</strong> 
+                At AppTech, we don’t just write code or configure servers; we build bridges. Whether you are a small business looking 
+                for your first professional website or a growing company needing to simplify your IT workflow, we are here to ensure 
+                that technology serves you—not the other way around.
+            </p>
+            <div class="welcome-divider"></div>
+        </div>
+    </section>
+
+    <section id="about" class="values-section">
         <div class="container">
-            <div class="contact-wrapper">
-                <div class="contact-info">
-                    <h2>Let's Connect</h2>
-                    <p>Have a project in mind? We'd love to help you bridge the gap.</p>
-                    <div class="info-item"><strong>Email:</strong> <span>apptech.official@gmail.com</span></div>
-                    <div class="info-item"><strong>Phone:</strong> <span>+260 975 212 655</span></div>
+            <h2 class="section-title text-center">Our Core Values</h2>
+            <p class="section-subtitle text-center">The philosophy behind every line of code we write.</p>
+            
+            <div class="values-grid">
+                <div class="value-item">
+                    <div class="value-number">01</div>
+                    <h3>Human-Centric Design</h3>
+                    <p>We believe technology should adapt to people, not the other way around. Every automation we build is designed to be intuitive and stress-free for the user.</p>
                 </div>
 
-                <form action="https://api.web3forms.com/submit" method="POST" class="contact-form">
-                    <input type="hidden" name="access_key" value="85607426-e470-4575-8f51-a5264ac179c3">
-                    <div class="form-group">
-                        <label>Your Name</label>
-                        <input type="text" name="name" placeholder="Full Name" required>
-                    </div>
-                    <div class="form-group">
-                        <label>Email Address</label>
-                        <input type="email" name="email" placeholder="Email Address" required>
-                    </div>
-                    <div class="form-group">
-                        <label>Message</label>
-                        <textarea name="message" rows="5" placeholder="Tell us about your needs..." required></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Send Message</button>
-                </form>
+                <div class="value-item">
+                    <div class="value-number">02</div>
+                    <h3>Bridging the Gap</h3>
+                    <p>We identify the smallest frictions between manual work and digital power, creating seamless transitions that make businesses more efficient.</p>
+                </div>
+
+                <div class="value-item">
+                    <div class="value-number">03</div>
+                    <h3>Empowering Literacy</h3>
+                    <p>Automation isn't helpful if you don't understand it. We provide the "IT Basics" to ensure our clients feel confident and in control of their tools.</p>
+                </div>
             </div>
         </div>
     </section>
 
-   <footer class="footer text-center">
-        <p>&copy; 2026 AppTech Solutions. Founded by Lilato Nalumino & Manasseh Sasu.</p>
-    </footer>
-
-</body>
-</html>
+    <section id="services" class="services">
+        <div class="container">
+            <h2 class="section-title text-center">Our Core Expertise</h2>
+            <div class="grid">
+                <div class="card">
+                    <div class="card-icon">🌐</div>
+                    <h3>Web Development</h3>
+                    <p>Modern, responsive websites built with clean code and high performance in mind.</p>
+                    <ul>
+                        <li>Custom Portfolios</li>
+                        <li>E-commerce Platforms</li>
+                        <li>UI/UX Design</li>
+                    </ul>
+                </div>
+                <div class="card">
+                    <div class="card-icon">💻</div>
+                    <h3>IT Foundations</h3>
+                    <p>Setting up the essential digital infrastructure to keep your business running smoothly.</p>
+                    <ul>
+                        <li>System Setup</li>
+                        <li>Network Solutions</li>
+                        <li>Security Basics</li>
+                    </ul>
+                </div>
+                <div class="card">
+                    <div class="card-icon">⚙️</div>
+                    <h3>Smart Automation</h3>
+                    <p>Connecting repetitive workflows with automated tools to save you time and money.</p>
+                    <ul>
+                        <li>Process Mapping</li>
+                        <li>Tool Integration</li>
+                        <li>Workflow Efficiency</li>
