--- a/index.html
+++ b/index.html
@@ -126,12 +126,12 @@
                 </div>
                 <div class="card">
                     <div class="card-icon">📡</div>
-                    <h3>Networking & Security</h3>
+                    <h3>Network Infrastrure</h3>
                     <p>Specialized in computer networks and data communications to ensure secure connectivity.</p>
                     <ul>
-                        <li>Network Architecture</li>
-                        <li>Data Communication</li>
-                        <li>Cybersecurity Protocols</li>
+                        <li>LAN/WAN Design</li>
+                        <li>Network Security</li>
+                        <li>Wireless Optimization</li>
                     </ul>
                 </div>
             </div>
