--- a/index.html
+++ b/index.html
@@ -176,6 +176,11 @@
                     </div>
 
                     <div class="form-group">
+                        <label>Phone Number</label>
+                        <input type="tel" name="phone" palceholder="+260..." required>
+                    </div>    
+
+                    <div class="form-group">
                         <label>Estimated Budget (ZMW)</label>
                         <select name="budget">
                             <option value="Not Sure">I'm not sure yet</option>
