--- a/index.html
+++ b/index.html
@@ -140,6 +140,141 @@
         </div>
     </section>
 
+     <section class="pricing-section">
+        <div class="container">
+            <h2 class="section-title">Transparent Pricing for Zambian Growth</h2>
+            
+            <h3 class="category-title">1. Web Development Packages (One-Time)</h3>
+            <div class="pricing-row">
+                <div class="pricing-card">
+                    <h3>Starter (SME)</h3>
+                    <p class="price">K4,500<span> /starting</span></p>
+                    <ul>
+                        <li>3 - 5 Responsive Pages</li>
+                        <li>.co.zm + 5 Emails</li>
+                        <li>Basic SEO Setup</li>
+                        <li>Mobile Ready ✅</li>
+                    </ul>
+                    <a href="https://wa.me/260975212655" class="cta-button">Get Started</a>
+                </div>
+                <div class="pricing-card featured">
+                    <div class="badge">Best Value</div>
+                    <h3>Business Pro</h3>
+                    <p class="price">K8,500<span> /starting</span></p>
+                    <ul>
+                        <li>Up to 10 Pages</li>
+                        <li>.co.zm + 20 Emails</li>
+                        <li>Advanced Local SEO</li>
+                        <li>Priority Mobile Design</li>
+                    </ul>
+                    <a href="https://wa.me/260975212655" class="cta-button">Select Pro</a>
+                </div>
+                <div class="pricing-card">
+                    <h3>E-Commerce</h3>
+                    <p class="price">K15,000<span> /starting</span></p>
+                    <ul>
+                        <li>Unlimited Products</li>
+                        <li>Payment Gateway</li>
+                        <li>Full Product SEO</li>
+                        <li>Inventory Mgmt</li>
+                    </ul>
+                    <a href="https://wa.me/260975212655" class="cta-button">Start Selling</a>
+                </div>
+            </div>
+
+            <h3 class="category-title" style="margin-top: 60px;">2. Infrastructure & Networking (Fixed Fee)</h3>
+            <div class="networking-row">
+                <div class="net-item">
+                    <span class="net-label">Office Wi-Fi Audit</span>
+                    <span class="net-price">K750</span>
+                </div>
+                <div class="net-item">
+                    <span class="net-label">Basic LAN Setup</span>
+                    <span class="net-price">K3,500*</span>
+                </div>
+                <div class="net-item">
+                    <span class="net-label">Advanced Networking</span>
+                    <span class="net-price">K7,000+</span>
+                </div>
+            </div>
+
+            <h3 class="category-title" style="margin-top: 60px;">3. IT Basics & Support (Monthly)</h3>
+            <div class="pricing-row">
+                <div class="pricing-card">
+                    <h3>"On-Call" Support</h3>
+                    <p class="price">K1,200<span> /mo</span></p>
+                    <ul>
+                        <li>Remote Only Support</li>
+                        <li>Monthly Updates</li>
+                        <li>24hr Response</li>
+                    </ul>
+                    <a href="#contact" class="cta-button">Subscribe</a>
+                </div>
+                <div class="pricing-card featured">
+                    <h3>Managed IT (Silver)</h3>
+                    <p class="price">K3,500<span> /mo</span></p>
+                    <ul>
+                        <li>Remote + 1 Site Visit</li>
+                        <li>Weekly Backups</li>
+                        <li>4hr Response</li>
+                    </ul>
+                    <a href="#contact" class="cta-button">Subscribe</a>
+                </div>
+                <div class="pricing-card">
+                    <h3>Total Tech (Gold)</h3>
+                    <p class="price">K6,000<span> /mo</span></p>
+                    <ul>
+                        <li>Unlimited Site Visits</li>
+                        <li>Daily Monitoring</li>
+                        <li>1hr Priority Response</li>
+                    </ul>
+                    <a href="#contact" class="cta-button">Subscribe</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact" class="contact">
+        <div class="container">
+            <div class="contact-wrapper">
+                <div class="contact-info">
+                    <h2>Let's Connect</h2>
+                    <p>Ready to bridge the gap? We'd love to help.</p>
+                    <div class="info-item"><strong>Email:</strong> <span>apptech.official@gmail.com</span></div>
+                    <div class="info-item"><strong>Phone:</strong> <span>+260 975 212 655</span></div>
+                </div>
+                <form action="https://api.web3forms.com/submit" method="POST" class="contact-form">
+                    <input type="hidden" name="access_key" value="85607426-e470-4575-8f51-a5264ac179c3">
+                    <div class="form-group">
+                        <label>Your Name</label>
+                        <input type="text" name="name" placeholder="Full Name" required>
+                    </div>
+                    <div class="form-group">
+                        <label>Phone Number</label>
+                        <input type="tel" name="phone" placeholder="+260..." required>
+                    </div>
+                    <div class="form-group">
+                        <label>Message</label>
+                        <textarea name="message" rows="4" placeholder="How can we help?" required></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Send Message</button>
+                </form>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer text-center">
+        <p>&copy; 2026 AppTech Solutions. Founded by Lilato Chikonde & Manasseh Sasu.</p>
+    </footer>
+
+    <a href="https://wa.me/260975212655?text=Hi%20AppTech,%20I'm%20interested%20in%20your%20IT%20services!" class="whatsapp-float" target="_blank">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp Support" class="whatsapp-icon">
+        <span class="whatsapp-text">Chat with us</span>
+    </a>
+
+</body>
+</html>
+
     <section id="contact" class="contact">
         <div class="container">
             <div class="contact-wrapper">
