--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
             <h2 class="section-title">Meet the Founders</h2>
             <div class="founders-grid">
                 <div class="founder-card">
-                    <h3>Lilato Nalumino</h3>
+                    <h3>Manasseh Sasu</h3>
                     <p class="founder-role">Co-Founder</p>
                 </div>
                 <div class="founder-card">
-                    <h3>Manasseh Sasu</h3>
+                    <h3>Lilato Chikonde</h3>
                     <p class="founder-role">Co-Founder</p>
                 </div>
             </div>
@@ -242,6 +242,7 @@
                     <p>Ready to bridge the gap? We'd love to help.</p>
                     <div class="info-item"><strong>Email:</strong> <span>apptech.official@gmail.com</span></div>
                     <div class="info-item"><strong>Phone:</strong> <span>+260 975 212 655</span></div>
+                    <div class="info-item"><strong>Phone:</strong> <span>+260 773 562 277</span></div>
                 </div>
                 <form action="https://api.web3forms.com/submit" method="POST" class="contact-form">
                     <input type="hidden" name="access_key" value="85607426-e470-4575-8f51-a5264ac179c3">
@@ -264,7 +265,7 @@
     </section>
 
     <footer class="footer text-center">
-        <p>&copy; 2026 AppTech Solutions. Founded by Lilato Chikonde & Manasseh Sasu.</p>
+        <p>&copy; 2026 AppTech Solutions. Founded by Manssseh Sasu & Lilato Chikonde.</p>
     </footer>
 
     <a href="https://wa.me/260975212655?text=Hi%20AppTech,%20I'm%20interested%20in%20your%20IT%20services!" class="whatsapp-float" target="_blank">
@@ -275,73 +276,4 @@
 </body>
 </html>
 
-    <section id="contact" class="contact">
-        <div class="container">
-            <div class="contact-wrapper">
-                <div class="contact-info">
-                    <h2>Let's Connect</h2>
-                    <p>Have a project in mind? We'd love to help you bridge the gap.</p>
-                    
-                    <div class="info-item">
-                        <strong>Email:</strong> <span>apptech.official@gmail.com</span>
-                    </div>
-
-                    <div class="info-item">
-                        <strong>Phone:</strong> 
-                        <span>+260 975 212 655</span><br>
-                        <strong style="visibility: hidden;">Phone:</strong> 
-                        <span>+260 773 562 277</span>
-                    </div>
-
-                    <div class="info-item">
-                        <strong>Location:</strong> <span>Ndola, Zambia</span>
-                    </div>
-                </div>
-
-                <form action="https://api.web3forms.com/submit" method="POST" class="contact-form">
-                    <input type="hidden" name="access_key" value="85607426-e470-4575-8f51-a5264ac179c3">
-                    <input type="hidden" name="redirect" value="https://apptechofficial.github.io/AppTech/thank-you.html">
-                    
-                    <div class="form-group">
-                        <label>Your Name</label>
-                        <input type="text" name="name" placeholder="Full Name" required>
-                    </div>
-
-                    <div class="form-group">
-                        <label>Email Address</label>
-                        <input type="email" name="email" placeholder="Email Address" required>
-                    </div>
-
-                    <div class="form-group">
-                        <label>Phone Number</label>
-                        <input type="tel" name="phone" palceholder="+260..." required>
-                    </div>    
-
-                    <div class="form-group">
-                        <label>Estimated Budget (ZMW)</label>
-                        <select name="budget">
-                            <option value="Not Sure">I'm not sure yet</option>
-                            <option value="Under 2000">Under K2,000</option>
-                            <option value="2000-5000">K2,000 - K5,000</option>
-                            <option value="5000-10000">K5,000 - K10,000</option>
-                            <option value="10000+">K10,000+</option>
-                        </select>
-                    </div>
-
-                    <div class="form-group">
-                        <label>Message</label>
-                        <textarea name="message" rows="5" placeholder="Tell us about your needs..." required></textarea>
-                    </div>
-
-                    <button type="submit" class="btn btn-primary">Send Message</button>
-                </form>
-            </div>
-        </div>
-    </section>
-
-   <footer class="footer text-center">
-        <p>&copy; 2026 AppTech Solutions. Founded by Lilato Nalumino & Manasseh Sasu.</p>
-    </footer>
-
-</body>
-</html>
+   
