--- a/index.html
+++ b/index.html
@@ -235,34 +235,60 @@
     </section>
 
     <section id="contact" class="contact">
-        <div class="container">
-            <div class="contact-wrapper">
-                <div class="contact-info">
-                    <h2>Let's Connect</h2>
-                    <p>Ready to bridge the gap? We'd love to help.</p>
-                    <div class="info-item"><strong>Email:</strong> <span>apptech.official@gmail.com</span></div>
-                    <div class="info-item"><strong>Phone:</strong> <span>+260 975 212 655</span></div>
-                    <div class="info-item"><strong>Phone:</strong> <span>+260 773 562 277</span></div>
+    <div class="container">
+        <div class="contact-wrapper">
+            <div class="contact-info">
+                <h2>Let's Connect</h2>
+                <p>Ready to bridge the gap? We'd love to help you with your networking, web, or accounting needs.</p>
+                
+                <div class="info-item">
+                    <strong>Email:</strong> <span>apptech.official@gmail.com</span>
                 </div>
-                <form action="https://api.web3forms.com/submit" method="POST" class="contact-form">
-                    <input type="hidden" name="access_key" value="85607426-e470-4575-8f51-a5264ac179c3">
-                    <div class="form-group">
-                        <label>Your Name</label>
-                        <input type="text" name="name" placeholder="Full Name" required>
+
+                <div class="info-item">
+                    <strong>Phone Numbers:</strong>
+                    <div class="phone-list">
+                        <span>📞 +260 975 212 655</span><br>
+                        <span>📞 +260 773 562 277</span>
                     </div>
-                    <div class="form-group">
-                        <label>Phone Number</label>
-                        <input type="tel" name="phone" placeholder="+260..." required>
-                    </div>
-                    <div class="form-group">
-                        <label>Message</label>
-                        <textarea name="message" rows="4" placeholder="How can we help?" required></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Send Message</button>
-                </form>
+                </div>
+
+                <div class="info-item">
+                    <strong>Location:</strong> <span>Ndola, Zambia</span>
+                </div>
             </div>
+
+            <form action="https://api.web3forms.com/submit" method="POST" class="contact-form">
+                <input type="hidden" name="access_key" value="85607426-e470-4575-8f51-a5264ac179c3">
+                
+                <input type="hidden" name="redirect" value="https://apptechofficial.github.io/AppTech/thank-you.html">
+
+                <div class="form-group">
+                    <label>Your Name</label>
+                    <input type="text" name="name" placeholder="Full Name" required>
+                </div>
+
+                <div class="form-group">
+                    <label>Email Address</label>
+                    <input type="email" name="email" placeholder="Email Address" required>
+                </div>
+
+                <div class="form-group">
+                    <label>Phone Number</label>
+                    <input type="tel" name="phone" placeholder="e.g. +260..." required>
+                </div>
+
+                <div class="form-group">
+                    <label>Message</label>
+                    <textarea name="message" rows="5" placeholder="Tell us about your project..." required></textarea>
+                </div>
+
+                <button type="submit" class="btn btn-primary">Send Message</button>
+            </form>
         </div>
-    </section>
+    </div>
+</section>
+
 
     <footer class="footer text-center">
         <p>&copy; 2026 AppTech Solutions. Founded by Manssseh Sasu & Lilato Chikonde.</p>
