--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         <div class="contact-wrapper">
             <div class="contact-info">
                 <h2>Let's Connect</h2>
-                <p>Ready to bridge the gap? We'd love to help you with your networking, web, or accounting needs.</p>
+                <p>Ready to bridge the gap? We'd love to help you with your networking  web needs.</p>
                 
                 <div class="info-item">
                     <strong>Email:</strong> <span>apptech.official@gmail.com</span>
