--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <head>
     <title>AppTech | Bridging Automation and Human Intuition</title>
     <meta name="description" content="AppTech bridges automation with human intuition to create smarter workflows and tools.">
-</head>
+    <link rel="canonical" href="https://apptechofficial.github.io/AppTech/#services">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
     <nav class="navbar">
