--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     <p class="price">K4,500<span> /starting</span></p>
                     <ul>
                         <li>3 - 5 Responsive Pages</li>
-                        <li>.co.zm + 5 Emails</li>
+                        <li>.co.zm(1st Year)</li>
                         <li>Basic SEO Setup</li>
                         <li>Mobile Ready ✅</li>
                     </ul>
@@ -163,7 +163,7 @@
                     <p class="price">K8,500<span> /starting</span></p>
                     <ul>
                         <li>Up to 10 Pages</li>
-                        <li>.co.zm + 20 Emails</li>
+                        <li>.co.zm (1st Year)</li>
                         <li>Advanced Local SEO</li>
                         <li>Priority Mobile Design</li>
                     </ul>
@@ -180,6 +180,9 @@
                     </ul>
                     <a href="https://wa.me/260975212655" class="cta-button">Start Selling</a>
                 </div>
+                <div class="pricing-note">
+            <p><strong>Note:</strong> All prices listed are for website development only. Includes 1st year .co.zm domain registration. Hosting, domain renewal (after 1st year), and email services are not included and must be arranged separately with a hosting provider.</p>
+        </div>
             </div>
 
             <h3 class="category-title" style="margin-top: 60px;">2. Infrastructure & Networking (Fixed Fee)</h3>
