--- a/index.html
+++ b/index.html
@@ -144,43 +144,43 @@
         <div class="container">
             <h2 class="section-title">Transparent Pricing for Zambian Growth</h2>
             
-            <h3 class="category-title">1. Web Development Packages (One-Time)</h3>
-            <div class="pricing-row">
-                <div class="pricing-card">
-                    <h3>Starter (SME)</h3>
-                    <p class="price">K4,500<span> /starting</span></p>
-                    <ul>
-                        <li>3 - 5 Responsive Pages</li>
-                        <li>.co.zm(1st Year)</li>
-                        <li>Basic SEO Setup</li>
-                        <li>Mobile Ready ✅</li>
-                    </ul>
-                    <a href="https://wa.me/260975212655" class="cta-button">Get Started</a>
-                </div>
-                <div class="pricing-card featured">
-                    <div class="badge">Best Value</div>
-                    <h3>Business Pro</h3>
-                    <p class="price">K8,500<span> /starting</span></p>
-                    <ul>
-                        <li>Up to 10 Pages</li>
-                        <li>.co.zm (1st Year)</li>
-                        <li>Advanced Local SEO</li>
-                        <li>Priority Mobile Design</li>
-                    </ul>
-                    <a href="https://wa.me/260975212655" class="cta-button">Select Pro</a>
-                </div>
-                <div class="pricing-card">
-                    <h3>E-Commerce</h3>
-                    <p class="price">K15,000<span> /starting</span></p>
-                    <ul>
-                        <li>Unlimited Products</li>
-                        <li>Payment Gateway</li>
-                        <li>Full Product SEO</li>
-                        <li>Inventory Mgmt</li>
-                    </ul>
-                    <a href="https://wa.me/260975212655" class="cta-button">Start Selling</a>
-                </div>
-                <div class="pricing-note">
+          <h3 class="category-title">1. Web Development Packages (One-Time)</h3>
+<div class="pricing-row">
+    <div class="pricing-card">
+        <h3>Starter (SME)</h3>
+        <p class="price">K4,500<span> /starting</span></p>
+        <ul>
+            <li>3 - 5 Responsive Pages</li>
+            <li>.co.zm (1st Year)</li>
+            <li>Basic SEO Setup</li>
+            <li>Mobile Ready ✅</li>
+        </ul>
+        <a href="https://wa.me/260975212655" class="cta-button">Get Started</a>
+    </div>
+    <div class="pricing-card featured">
+        <div class="badge">Best Value</div>
+        <h3>Business Pro</h3>
+        <p class="price">K8,500<span> /starting</span></p>
+        <ul>
+            <li>Up to 10 Pages</li>
+            <li>.co.zm (1st Year)</li>
+            <li>Advanced Local SEO</li>
+            <li>Priority Mobile Design</li>
+        </ul>
+        <a href="https://wa.me/260975212655" class="cta-button">Select Pro</a>
+    </div>
+    <div class="pricing-card">
+        <h3>E-Commerce</h3>
+        <p class="price">K15,000<span> /starting</span></p>
+        <ul>
+            <li>Unlimited Products</li>
+            <li>Payment Gateway</li>
+            <li>Full Product SEO</li>
+            <li>Inventory Mgmt</li>
+        </ul>
+        <a href="https://wa.me/260975212655" class="cta-button">Start Selling</a>
+    </div>
+</div> <div class="pricing-note">
     <p><strong>Note:</strong> All prices listed are for website development only. Includes 1st year .co.zm domain registration. Hosting, domain renewal (after 1st year), and email services are not included and must be arranged separately with a hosting provider.</p>
 </div>
 
