--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AppTech | Bridging Automation and Human Intuition</title>
+   <title>AppTech Solutions | Web & IT Services in Zambia</title>
+  <meta name="description" content="AppTech Solutions provides web development, networking, and IT infrastructure services in Zambia.">
+  <link rel="canonical" href="https://apptechofficial.github.io/AppTech/">
+  <meta property="og:title" content="AppTech Solutions">
+  <meta property="og:description" content="Web, Networking & IT Services in Zambia">
+  <meta property="og:url" content="https://apptechofficial.github.io/AppTech/">
+  <meta property="og:type" content="website">
+
     <meta name="description" content="AppTech bridges automation with human intuition to create smarter workflows and tools.">
     <link rel="canonical" href="https://apptechofficial.github.io/AppTech/#services">
     <link rel="stylesheet" href="style.css">
