--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
   <meta property="og:description" content="Web, Networking & IT Services in Zambia">
   <meta property="og:url" content="https://apptechofficial.github.io/AppTech/">
   <meta property="og:type" content="website">
-
-    <meta name="description" content="AppTech bridges automation with human intuition to create smarter workflows and tools.">
-    <link rel="canonical" href="https://apptechofficial.github.io/AppTech/#services">
+    <link rel="canonical" href="https://apptechofficial.github.io/AppTech/">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
