--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/AppTech/favicon.ico" type="image/x-icon">
+
+<link rel="apple-touch-icon" sizes="180x180" href="/AppTech/favicon-light-180x180.png">
    <title>AppTech Solutions | Web & IT Services in Zambia</title>
   <meta name="description" content="AppTech Solutions provides web development, networking, and IT infrastructure services in Zambia.">
   <link rel="canonical" href="https://apptechofficial.github.io/AppTech/">
