--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel="apple-touch-icon" sizes="32x32" href="/AppTech/favicon-light-32x32.png">
    <title>AppTech Solutions | Web & IT Services in Zambia</title>
   <meta name="description" content="AppTech Solutions provides web development, networking, and IT infrastructure services in Zambia.">
+    <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://apptechofficial.github.io/AppTech/">
   <meta property="og:title" content="AppTech Solutions">
   <meta property="og:description" content="Web, Networking & IT Services in Zambia">
